qt6/gen_qmessagebox.h

typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
int QMessageBox_information7(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text, int defaultButtonNumber);
int QMessageBox_information8(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text, int defaultButtonNumber, int escapeButtonNumber);
int QMessageBox_question52(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1);
int QMessageBox_question6(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1, int button2);
int QMessageBox_question53(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text);
int QMessageBox_question62(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text);
int QMessageBox_question7(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text, int defaultButtonNumber);
int QMessageBox_question8(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text, int defaultButtonNumber, int escapeButtonNumber);
int QMessageBox_warning6(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1, int button2);
int QMessageBox_warning52(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text);
int QMessageBox_warning62(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text);
int QMessageBox_warning7(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text, int defaultButtonNumber);
int QMessageBox_warning8(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text, int defaultButtonNumber, int escapeButtonNumber);
int QMessageBox_critical6(QWidget* parent, struct miqt_string title, struct miqt_string text, int button0, int button1, int button2);
int QMessageBox_critical52(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text);
int QMessageBox_critical62(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text);
int QMessageBox_critical7(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text, int defaultButtonNumber);
int QMessageBox_critical8(QWidget* parent, struct miqt_string title, struct miqt_string text, struct miqt_string button0Text, struct miqt_string button1Text, struct miqt_string button2Text, int defaultButtonNumber, int escapeButtonNumber);
bool QMessageBox_override_virtual_metacall(void* self, intptr_t slot);
int QMessageBox_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QMessageBox_override_virtual_event(void* self, intptr_t slot);
bool QMessageBox_virtualbase_event(void* self, QEvent* e);
bool QMessageBox_override_virtual_resizeEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QMessageBox_override_virtual_showEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_showEvent(void* self, QShowEvent* event);
bool QMessageBox_override_virtual_closeEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QMessageBox_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QMessageBox_override_virtual_changeEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_changeEvent(void* self, QEvent* event);
bool QMessageBox_override_virtual_setVisible(void* self, intptr_t slot);
void QMessageBox_virtualbase_setVisible(void* self, bool visible);
bool QMessageBox_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QMessageBox_virtualbase_sizeHint(const void* self);
bool QMessageBox_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QMessageBox_virtualbase_minimumSizeHint(const void* self);
bool QMessageBox_override_virtual_open(void* self, intptr_t slot);
void QMessageBox_virtualbase_open(void* self);
bool QMessageBox_override_virtual_exec(void* self, intptr_t slot);
int QMessageBox_virtualbase_exec(void* self);
bool QMessageBox_override_virtual_done(void* self, intptr_t slot);
void QMessageBox_virtualbase_done(void* self, int param1);
bool QMessageBox_override_virtual_accept(void* self, intptr_t slot);
void QMessageBox_virtualbase_accept(void* self);
bool QMessageBox_override_virtual_reject(void* self, intptr_t slot);
void QMessageBox_virtualbase_reject(void* self);
bool QMessageBox_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QMessageBox_override_virtual_eventFilter(void* self, intptr_t slot);
bool QMessageBox_virtualbase_eventFilter(void* self, QObject* param1, QEvent* param2);
bool QMessageBox_override_virtual_devType(void* self, intptr_t slot);
int QMessageBox_virtualbase_devType(const void* self);
bool QMessageBox_override_virtual_heightForWidth(void* self, intptr_t slot);
int QMessageBox_virtualbase_heightForWidth(const void* self, int param1);
bool QMessageBox_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QMessageBox_virtualbase_hasHeightForWidth(const void* self);
bool QMessageBox_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QMessageBox_virtualbase_paintEngine(const void* self);
bool QMessageBox_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QMessageBox_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QMessageBox_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QMessageBox_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QMessageBox_override_virtual_wheelEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QMessageBox_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QMessageBox_override_virtual_focusInEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QMessageBox_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QMessageBox_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
void QMessageBox_virtualbase_enterEvent(void* self, QEnterEvent* event);