qt6/gen_qmessagebox.nim

proc fcQMessageBox_information7(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string, defaultButtonNumber: cint): cint {.importc: "QMessageBox_information7".}
proc fcQMessageBox_information8(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string, defaultButtonNumber: cint, escapeButtonNumber: cint): cint {.importc: "QMessageBox_information8".}
proc fcQMessageBox_question52(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint): cint {.importc: "QMessageBox_question52".}
proc fcQMessageBox_question6(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint, button2: cint): cint {.importc: "QMessageBox_question6".}
proc fcQMessageBox_question53(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string): cint {.importc: "QMessageBox_question53".}
proc fcQMessageBox_question62(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string): cint {.importc: "QMessageBox_question62".}
proc fcQMessageBox_question7(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string, defaultButtonNumber: cint): cint {.importc: "QMessageBox_question7".}
proc fcQMessageBox_question8(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string, defaultButtonNumber: cint, escapeButtonNumber: cint): cint {.importc: "QMessageBox_question8".}
proc fcQMessageBox_warning6(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint, button2: cint): cint {.importc: "QMessageBox_warning6".}
proc fcQMessageBox_warning52(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string): cint {.importc: "QMessageBox_warning52".}
proc fcQMessageBox_warning62(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string): cint {.importc: "QMessageBox_warning62".}
proc fcQMessageBox_warning7(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string, defaultButtonNumber: cint): cint {.importc: "QMessageBox_warning7".}
proc fcQMessageBox_warning8(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string, defaultButtonNumber: cint, escapeButtonNumber: cint): cint {.importc: "QMessageBox_warning8".}
proc fcQMessageBox_critical6(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0: cint, button1: cint, button2: cint): cint {.importc: "QMessageBox_critical6".}
proc fcQMessageBox_critical52(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string): cint {.importc: "QMessageBox_critical52".}
proc fcQMessageBox_critical62(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string): cint {.importc: "QMessageBox_critical62".}
proc fcQMessageBox_critical7(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string, defaultButtonNumber: cint): cint {.importc: "QMessageBox_critical7".}
proc fcQMessageBox_critical8(parent: pointer, title: struct_miqt_string, text: struct_miqt_string, button0Text: struct_miqt_string, button1Text: struct_miqt_string, button2Text: struct_miqt_string, defaultButtonNumber: cint, escapeButtonNumber: cint): cint {.importc: "QMessageBox_critical8".}
proc fQMessageBox_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QMessageBox_virtualbase_metacall".}
proc fcQMessageBox_override_virtual_metacall(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_metacall".}
proc fQMessageBox_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QMessageBox_virtualbase_event".}
proc fcQMessageBox_override_virtual_event(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_event".}
proc fQMessageBox_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_resizeEvent".}
proc fcQMessageBox_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_resizeEvent".}
proc fQMessageBox_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_showEvent".}
proc fcQMessageBox_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_showEvent".}
proc fQMessageBox_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_closeEvent".}
proc fcQMessageBox_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_closeEvent".}
proc fQMessageBox_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_keyPressEvent".}
proc fcQMessageBox_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_keyPressEvent".}
proc fQMessageBox_virtualbase_changeEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_changeEvent".}
proc fcQMessageBox_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_changeEvent".}
proc fQMessageBox_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QMessageBox_virtualbase_setVisible".}
proc fcQMessageBox_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_setVisible".}
proc fQMessageBox_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QMessageBox_virtualbase_sizeHint".}
proc fcQMessageBox_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_sizeHint".}
proc fQMessageBox_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QMessageBox_virtualbase_minimumSizeHint".}
proc fcQMessageBox_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_minimumSizeHint".}
proc fQMessageBox_virtualbase_open(self: pointer, ): void{.importc: "QMessageBox_virtualbase_open".}
proc fcQMessageBox_override_virtual_open(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_open".}
proc fQMessageBox_virtualbase_exec(self: pointer, ): cint{.importc: "QMessageBox_virtualbase_exec".}
proc fcQMessageBox_override_virtual_exec(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_exec".}
proc fQMessageBox_virtualbase_done(self: pointer, param1: cint): void{.importc: "QMessageBox_virtualbase_done".}
proc fcQMessageBox_override_virtual_done(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_done".}
proc fQMessageBox_virtualbase_accept(self: pointer, ): void{.importc: "QMessageBox_virtualbase_accept".}
proc fcQMessageBox_override_virtual_accept(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_accept".}
proc fQMessageBox_virtualbase_reject(self: pointer, ): void{.importc: "QMessageBox_virtualbase_reject".}
proc fcQMessageBox_override_virtual_reject(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_reject".}
proc fQMessageBox_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QMessageBox_virtualbase_contextMenuEvent".}
proc fcQMessageBox_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_contextMenuEvent".}
proc fQMessageBox_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QMessageBox_virtualbase_eventFilter".}
proc fcQMessageBox_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_eventFilter".}
proc fQMessageBox_virtualbase_devType(self: pointer, ): cint{.importc: "QMessageBox_virtualbase_devType".}
proc fcQMessageBox_override_virtual_devType(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_devType".}
proc fQMessageBox_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QMessageBox_virtualbase_heightForWidth".}
proc fcQMessageBox_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_heightForWidth".}
proc fQMessageBox_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QMessageBox_virtualbase_hasHeightForWidth".}
proc fcQMessageBox_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_hasHeightForWidth".}
proc fQMessageBox_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QMessageBox_virtualbase_paintEngine".}
proc fcQMessageBox_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_paintEngine".}
proc fQMessageBox_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_mousePressEvent".}
proc fcQMessageBox_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_mousePressEvent".}
proc fQMessageBox_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_mouseReleaseEvent".}
proc fcQMessageBox_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_mouseReleaseEvent".}
proc fQMessageBox_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_mouseDoubleClickEvent".}
proc fcQMessageBox_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_mouseDoubleClickEvent".}
proc fQMessageBox_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_mouseMoveEvent".}
proc fcQMessageBox_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_mouseMoveEvent".}
proc fQMessageBox_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_wheelEvent".}
proc fcQMessageBox_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_wheelEvent".}
proc fQMessageBox_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_keyReleaseEvent".}
proc fcQMessageBox_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_keyReleaseEvent".}
proc fQMessageBox_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_focusInEvent".}
proc fcQMessageBox_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_focusInEvent".}
proc fQMessageBox_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_focusOutEvent".}
proc fcQMessageBox_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QMessageBox_override_virtual_focusOutEvent".}
proc fQMessageBox_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QMessageBox_virtualbase_enterEvent".}
